[package]
name = "mdbook-unlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.28"
semver = "1.0.17"
serde = "1.0.163"
serde_derive = "1.0.163"
pulldown-cmark = { version = "0.9.2", default-features = false }
